se agrego bootstrap table a recepciones, remisiones, resultados de proceso, muestreo en parrillas y humedades

--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -79,7 +79,7 @@
                                 <th ng-if="!IsGrillToReception" data-field="Status" data-formatter="statusFormatter" data-align="center" data-sortable="true"
                                     ng-hide="currentUser.role === userRoles.qualityUser">Status</th>
                                 <th ng-if="!IsGrillToReception" data-align="center" data-formatter="operateFormatter" data-events="operateEvents">Operaciones</th>
-                                <th ng-if="IsGrillToReception" data-align="center" data-formatter="operateFormmatterIfIsGrillToReception">Operaciones</th>
+                                <th ng-if="IsGrillToReception" data-align="center" data-formatter="operateFormmatterIfIsGrillToReception">Asignar Parrilla</th>
                             </tr>
                         </thead>
                         <tbody>
