--- a/app/views/humidity/humidityAdd.html
+++ b/app/views/humidity/humidityAdd.html
@@ -5,42 +5,18 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
-                <div class="col-sm-12 actionbar">
-                    <div class="form-group">
-                        <div class="col-sm-12">
-                            <div class="fg-line">
-                                <input class="form-control input-sm" id="isearch" placeholder="buscar...." ng-model="searchReceptionEntries">
-                            </div>
-                        </div>
-                    </div>
+                <div ng-show="humiditiesInReceptionEntry.length >= 1">
+                    <table id="humidityAddTable"
+                        data-toggle="table"
+                        data-show-refresh="true"
+                        data-show-columns="true"
+                        data-unique-id="Id"
+                        data-pagination="true"
+                        data-search="true"
+                        data-show-export="true"
+                        data-page-list="[50, 100, 200, TODO]">
+                    </table>
                 </div>
-                <hr>
-                <table class="table table-striped table-bordered table-condensed table-hover">
-                    <thead>
-                        <tr>
-                            <th>Cilindro</th>
-                            <th>Recepciones (Folios)</th>
-                            <th>Fecha de Captura</th>
-                            <th>Variedad</th>
-                            <th>Productor</th>
-                            <th>Agregar Humedad</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="receptionEntry in humiditiesInReceptionEntry | filter:searchReceptionEntries | orderBy: 'Cylinder'">
-                            <td>{{receptionEntry.Cylinder}}</td>
-                            <td>{{receptionEntry.Receptions}}</td>
-                            <td>{{receptionEntry.EntryDate | date: 'dd/MM/yyyy HH:mm'}}</td>
-                            <td>{{receptionEntry.Variety}}</td>
-                            <td>{{receptionEntry.Producer}}</td>
-                            <td>
-                                <button class="btn btn-default" ng-click="redirectToAddHumidity(receptionEntry.Id)">
-                                <i class="md md-format-color-reset"></i>
-                            </button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
             </div>
         </div>
     </div>
