--- a/app/views/sampling/samplingAdd.html
+++ b/app/views/sampling/samplingAdd.html
@@ -84,7 +84,7 @@
                         <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveSampling(sampling)" ng-disabled="!samplingForm.$valid">Guardar</button>
                     </div>
                 </div>
-                <div ng-if="(currentUser.role === userRoles.admin) || (currentUser.role === userRoles.grillUser)">
+                <div ng-if="!isProcessResultSampling()" ng-if="(currentUser.role === userRoles.admin) || (currentUser.role === userRoles.grillUser)">
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <button type="submit" class="btn bgm-red waves-effect" data-ng-click="saveSampling(sampling, 1)" ng-disabled="!samplingForm.$valid">Guardar y Agregar Nueva Parrilla</button>
