--- a/app/views/report/reportOrigin.html
+++ b/app/views/report/reportOrigin.html
@@ -1,56 +1,31 @@
 <div class="animated bounceInRight">
-    <div class="card">
-        <div class="card-header">
-            <h2>Produccion de Nuez (Origen) Acumulado</h2>
-        </div>
-        <div class="card-body card-padding">
-            <div class="table-responsive">
-                <div class="row">
-                    <div class="col-sm-12 actionbar">
-                        <div class="form-group">
-                            <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                            <div class="col-sm-12">
-                                <div class="fg-line">
-                                    <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchReport">
-                                </div>
-                            </div>
-                        </div>
+	<div class="card">
+		<div class="card-header">
+			<h2>Produccion de Nuez (Origen) Acumulado</h2>
+		</div>
+		<div class="card-body card-padding">
+			<div class="table-responsive">
+                <div ng-show="reportOrigin.length >= 0">
+                    <div id="toolbar">
+                        <button class="btn btn-link" ng-click="originReportExportPdf()">
+                            <span class="glyphicon glyphicon-share"></span> Exportar PDF
+                        </button>
+                        <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('originReportTable'))">
+                            <span class="glyphicon glyphicon-share"></span> Copiar Reporte
+                        </button>
                     </div>
+                    <table id="originReportTable" 
+                        data-show-refresh="true" 
+                        data-show-columns="true" 
+                        data-toolbar="#toolbar" 
+                        data-unique-id="Id"
+                        data-pagination="true" 
+                        data-search="true" 
+                        data-show-export="true" 
+                        data-page-list="[10, 50, 100, 200, TODO]">
+                    </table>
                 </div>
-                <hr>
-                <button class="btn btn-link" ng-click="originReportExportPdf()">
-                    <span class="glyphicon glyphicon-share"></span> Exportar PDF
-                </button>
-                <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('originReportTable'))">
-                    <span class="glyphicon glyphicon-share"></span> Copiar Reporte
-                </button>
-                <hr>
-                <table id="originReportTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em;"
-                    fixed-header>
-                    <thead>
-                        <tr>
-                            <th>Campo</th>
-                            <th>Huerta/Lote</th>
-                            <th>Hectareas</th>
-                            <th ng-repeat="variety in reportOriginFirst.Varieties">{{variety.Variety}}</th>
-                            <th>Produccion Total</th>
-                            <th>Rendimiento / Ha</th>
-                            <th ng-repeat="variety in reportOriginFirst.Varieties">{{variety.Variety}}(R%)</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="report in reportOrigin | filter:searchReport">
-                            <td>{{report.Field}}</td>
-                            <td>{{report.Batch}}</td>
-                            <td>{{report.Hectares}}</td>
-                            <td ng-repeat="variety in report.Varieties">{{variety.Total}}</td>
-                            <td>{{report.TotalProduction}}</td>
-                            <td>{{report.PerformancePerHa}}</td>
-                            <td ng-repeat="variety in report.Varieties">{{variety.Performance}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
+			</div>
+		</div>
+	</div>
 </div>
