--- a/app/views/report/grill/grillIssuesReport.html
+++ b/app/views/report/grill/grillIssuesReport.html
@@ -5,7 +5,7 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
-                <div class="row">
+                <!--<div class="row">
                     <div class="col-sm-12 actionbar">
                         <div class="form-group">
                             <label for="isearch" class="col-sm-2 control-label">Buscar</label>
@@ -16,7 +16,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <hr>
                 <button class="btn btn-link" ng-click="grillIssuesExportPdf()">
                     <span class="glyphicon glyphicon-share"></span> Exportar a PDF
@@ -25,6 +25,44 @@
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                 </button>
                 <hr>
+                <!--<table id="grillIssues" 
+                            data-toggle="table"
+                            data-show-refresh="true" 
+                            data-show-columns="true" 
+                            data-toolbar="#toolbar"
+                            data-unique-id="Id" 
+                            data-pagination="true" 
+                            data-search="true" 
+                            data-show-export="true" 
+                            data-page-list="[10, 50, 100, 200, TODO]">
+                        <thead>
+                            <tr>
+                                <th data-field="Folio" data-align="center" data-sortable="true">No. Parrilla</th>
+                                <th data-field="DateCapture" data-align="center" data-sortable="true" data-formatter="dateFormatter">Fecha de Captura</th>
+                                <th data-field="Receptions" data-align="center" data-sortable="true">Folios</th>
+                                <th data-field="Size" data-align="center" data-sortable="true">Tamaño</th>
+                                <th data-field="Sacks" data-align="center" data-sortable="true">Sacos</th>
+                                <th data-field="Kilos" data-align="center" data-sortable="true">Kilos</th>
+                                <th data-field="Quality" data-align="center" data-sortable="true">Calidad</th>
+                                <th data-field="Variety" data-align="center" data-sortable="true">Variedad</th>
+                                <th data-field="Producer" data-align="center" data-sortable="true">Productor</th>
+                                <th data-field="Batch" data-align="center" data-sortable="true">Huerta/Lote</th>
+                                <th data-field="SampleWeight" data-align="center" data-sortable="true">Peso de la Muestra</th>
+                                <th data-field="HumidityPercent" data-align="center" data-sortable="true">% Humedad</th>
+                                <th data-field="WalnutNumber" data-align="center" data-sortable="true">Número de nueces</th>
+                                <th data-field="Performance" data-align="center" data-sortable="true">Rendimiento</th>
+                                <th data-field="TotalWeightOfEdibleNuts" data-align="center" data-sortable="true">Peso Total Nueces Comestibles</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="grillIssue in grillIssues">
+                            <td colspan="3"><b>Remision: </b>{{grillIssue.Remission}}</td>
+                            <td colspan="4"><b>Fecha de Captura: </b>:{{grillIssue.DateCapture | date:'dd/MM/yyyy HH:mm'}}</td>
+                            <td colspan="3"><b>Camion: </b>{{grillIssue.Truck}}</td>
+                            <td colspan="3"><b>Conductor: </b>{{grillIssue.Driver}}</td>
+                            <td colspan="3"><b>Caja:</b>{{grillIssue.Box}}</td>
+                        </tbody>
+                    </table>-->
                 <table id="grillIssues" class="table table-striped table-bordered table-condensed table-hover">
                     <thead>
                         <tr>
