cambios en las tablas de reportes

--- a/app/views/report/grill/secondGrillCurrentInv.html
+++ b/app/views/report/grill/secondGrillCurrentInv.html
@@ -24,7 +24,7 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('genericReport'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
-            <table id="genericReport" data-toggle="table" data-show-refresh="true" data-show-columns="true" data-toolbar="#toolbar"
+            <table id="genericReport" data-toggle="table" data-show-columns="true" data-toolbar="#toolbar"
                     data-unique-id="Id" data-pagination="true" data-search="true" data-show-export="true" data-page-list="[10, 50, 100, 200, TODO]">
                     <thead>
                         <tr>
