--- a/app/views/report/producerReport.html
+++ b/app/views/report/producerReport.html
@@ -42,7 +42,7 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('producerReport'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
-                <table id="producerReport" data-toggle="table" data-show-refresh="true" data-show-columns="true" data-toolbar="#toolbar"
+                <table id="producerReportTable" data-toggle="table" data-show-columns="true" data-toolbar="#toolbar"
                     data-unique-id="Id" data-pagination="true" data-search="true" data-show-export="true" data-page-list="[10, 50, 100, 200, TODO]">
                     <thead>
                         <tr>
