se agregaron toolbars a los reportes faltantes

--- a/app/views/report/grill/grillIssuesReport.html
+++ b/app/views/report/grill/grillIssuesReport.html
@@ -5,15 +5,12 @@
 		</div>
 		<div class="card-body card-padding">
 			<div class="table-responsive">
-				<div ng-show="grillIssues">
-					<div id="toolbar">
-						<button class="btn btn-link" onclick="selectElementContents(document.getElementById('grillIssues'))">
+				<div id="toolbar">
+					<button class="btn btn-link" onclick="selectElementContents(document.getElementById('grillIssues'))">
                             <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                         </button>
-					</div>
-					<table id="grillIssuestTable">
-					</table>
 				</div>
+				<table id="grillIssuestTable"></table>
 			</div>
 		</div>
 	</div>
