--- a/app/views/report/reportOrigin.html
+++ b/app/views/report/reportOrigin.html
@@ -5,26 +5,17 @@
 		</div>
 		<div class="card-body card-padding">
 			<div class="table-responsive">
-                <div ng-show="reportOrigin.length >= 0">
-                    <div id="toolbar">
-                        <button class="btn btn-link" ng-click="originReportExportPdf()">
+				<div id="toolbar">
+					<button class="btn btn-link" ng-click="originReportExportPdf()">
                             <span class="glyphicon glyphicon-share"></span> Exportar PDF
                         </button>
-                        <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('originReportTable'))">
+					<button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('originReportTable'))">
                             <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                         </button>
-                    </div>
-                    <table id="originReportTable" 
-                        data-show-refresh="true" 
-                        data-show-columns="true" 
-                        data-toolbar="#toolbar" 
-                        data-unique-id="Id"
-                        data-pagination="true" 
-                        data-search="true" 
-                        data-show-export="true" 
-                        data-page-list="[10, 50, 100, 200, TODO]">
-                    </table>
-                </div>
+				</div>
+				<table id="originReportTable" data-show-refresh="true" data-show-columns="true" data-toolbar="#toolbar" data-unique-id="Id"
+					data-pagination="true" data-search="true" data-show-export="true" data-page-list="[10, 50, 100, 200, TODO]">
+				</table>
 			</div>
 		</div>
 	</div>
