--- a/app/views/report/grill/grillIssuesReport.html
+++ b/app/views/report/grill/grillIssuesReport.html
@@ -6,7 +6,7 @@
 		<div class="card-body card-padding">
 			<div class="table-responsive">
 				<div id="toolbar">
-					<button class="btn btn-link" onclick="selectElementContents(document.getElementById('grillIssues'))">
+					<button class="btn btn-link" onclick="selectElementContents(document.getElementById('grillIssuestTable'))">
                             <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                         </button>
 				</div>
