se cambio creacion de tablas, a creacion por codigo desde controlador

--- a/app/views/humidity/humidityLastSamplings.html
+++ b/app/views/humidity/humidityLastSamplings.html
@@ -1,23 +1,12 @@
 <div class="animated bounceInRight">
-    <div class="card">
-        <div class="card-header">
-            <h2>Humedades</h2>
-        </div>
-        <div class="card-body card-padding">
-            <div class="table-responsive">
-                <div ng-show="humiditiesInReceptionEntry.length >= 0">
-                    <table id="humidityLastSamplingTable" 
-                            data-toggle="table"
-                            data-show-refresh="true"
-                            data-show-columns="true"
-                            data-unique-id="Id"
-                            data-pagination="true"
-                            data-search="true"
-                            data-show-export="true"
-                            data-page-list="[100, 200, 300, TODO]">
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="card">
+		<div class="card-header">
+			<h2>Humedades</h2>
+		</div>
+		<div class="card-body card-padding">
+			<div class="table-responsive">
+				<table id="humidityLastSamplingTable"></table>
+			</div>
+		</div>
+	</div>
 </div>
