--- a/app/views/processResult/processResultAdd.html
+++ b/app/views/processResult/processResultAdd.html
@@ -1,24 +1,12 @@
 <div class="animated bounceInRight">
-    <div class="card">
-        <div class="card-header">
-            <h2>Agregar Resultado de Proceso</h2>
-        </div>
-        <div class="card-body card-padding">
-            <div class="table-responsive">
-                <div ng-show="receptionEntries.length >= 0">
-                    <table id="processResultTable"
-                            data-toggle="table" 
-                            data-show-refresh="true" 
-                            data-show-columns="true" 
-                            data-unique-id="Id"
-                            data-toolbar="#toolbar" 
-                            data-pagination="true" 
-                            data-search="true" 
-                            data-show-export="true" 
-                            data-page-list="[50, 100, 200, TODO]">
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="card">
+		<div class="card-header">
+			<h2>Agregar Resultado de Proceso</h2>
+		</div>
+		<div class="card-body card-padding">
+			<div class="table-responsive">
+				<table id="processResultTable"></table>
+			</div>
+		</div>
+	</div>
 </div>
