--- a/app/views/grill/grillCurrentInv.html
+++ b/app/views/grill/grillCurrentInv.html
@@ -1,61 +1,17 @@
 <div class="animated bounceInRight">
-    <div class="card">
-        <div class="card-header">
-            <h2>Inventario Actual</h2>
-        </div>
-        <div class="card-body card-padding">
-            <div class="table-responsive">
-                <!--<div class="col-sm-12 actionbar">
-                    <div class="form-group">
-                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                        <div class="col-sm-12">
-                            <div class="fg-line">
-                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchGrills">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <hr>-->
-                <div ng-show="grills.length >= 1">
-                    <div id="toolbar">
-                        <button class="btn btn-link" ng-click="generatePDFCurrent()">
+	<div class="card">
+		<div class="card-header">
+			<h2>Inventario Actual</h2>
+		</div>
+		<div class="card-body card-padding">
+			<div class="table-responsive">
+				<div id="toolbar">
+					<button class="btn btn-link" ng-click="generatePDFCurrent()">
                             <span class="glyphicon glyphicon-share"></span>Exportar PDF
                         </button>
-                    </div>
-                    <table id="grillManageTable" 
-                        data-toggle="table" 
-                        data-show-refresh="true" 
-                        data-show-columns="true"
-                        data-toolbar="#toolbar" 
-                        data-unique-id="Id" 
-                        data-pagination="true" 
-                        data-search="true" 
-                        data-show-export="true"
-                        data-page-list="[10, 50, 100, 200, TODO]">
-                        <thead>
-                            <tr>
-                                <th data-field="Folio" data-align="center" data-sortable="true">No. de Parrilla</th>
-                                <th data-field="DateCapture" data-align="center" data-sortable="true" data-formatter="dateFormatter">Fecha de Captura</th>
-                                <th data-field="Receptions" data-align="center" data-sortable="true">Recepciones</th>
-                                <th data-field="Size" data-align="center" data-sortable="true">Tamaño</th>
-                                <th data-field="Sacks" data-align="center" data-sortable="true">Sacos</th>
-                                <th data-field="Kilos" data-align="center" data-sortable="true">Kilos</th>
-                                <th data-field="Quality" data-align="center" data-sortable="true">Calidad</th>
-                                <th data-field="Variety" data-align="center" data-sortable="true">Variedad</th>
-                                <th data-field="Producer" data-align="center" data-sortable="true">Productor</th>
-                                <th data-field="SampleWeight" data-align="center" data-sortable="true">Peso de la Muestra</th>
-                                <th data-field="HumidityPercent" data-align="center" data-sortable="true">Humedad</th>
-                                <th data-field="WalnutNumber" data-align="center" data-sortable="true">No.Nueces por Kilo</th>
-                                <th data-field="Performance" data-align="center" data-sortable="true">Rendimiento</th>
-                                <th data-field="TotalWeightOfEdibleNuts" data-align="center" data-sortable="true">Total</th>
-                                <th data-align="center" data-formatter="operateFormatterGrillCurrentInv" data-events="operateEventsCurrentInv">Operaciones</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
+				</div>
+				<table id="grillManageTable"></table>
+			</div>
+		</div>
+	</div>
 </div>
