--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -1,144 +1,21 @@
 <div class="animated bounceInRight">
-    <div class="card">
-        <div class="card-header">
-            <h2>Parillas de Nuez Procesadas</h2>
-        </div>
-        <div class="card-body card-padding">
-            <div class="table-responsive">
-                <!--<div class="col-sm-12 actionbar">
-                    <div class="form-group">
-                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                        <div class="col-sm-12">
-                            <div class="fg-line">
-                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchUser">
-                            </div>
-                        </div>
-                    </div>
-                    <div ng-show="showSearchOptions">
-                        <div class="col-sm-4">
-                            <div class="form-group">
-                                <div class="fg-line">
-                                    <input type="text" class="form-control" placeholder="buscar por productor.." ng-model="search.producer">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="form-group">
-                                <div class="fg-line">
-                                    <input type="text" class="form-control" placeholder="buscar por variedad.." ng-model="search.variety">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="form-group">
-                                <div class="fg-line">
-                                    <input type="text" class="form-control" placeholder="buscar por calidad.." ng-model="search.quality">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12">
-                    <div class="checkbox m-b-15">
-                        <label><input type="checkbox" ng-model="showSearchOptions"><i class="input-helper"></i>MOSTRAR MAS OPCIONES DE BUSQUEDA</label>
-                    </div>
-                </div>
-                <hr>-->
-                <div ng-show="grills.length >= 1">
-                    <div id="toolbar">
-                        <button class="btn btn-link" ng-click="generatePDF()">
+	<div class="card">
+		<div class="card-header">
+			<h2>Parillas de Nuez Procesadas</h2>
+		</div>
+		<div class="card-body card-padding">
+			<div class="table-responsive">
+				<div id="toolbar">
+					<button class="btn btn-link" ng-click="generatePDF()">
                             <span class="glyphicon glyphicon-share"></span>Exportar PDF
                         </button>
-                    </div>
-                    <table id="grillManageTable" 
-                        data-toggle="table" 
-                        data-show-refresh="true" 
-                        data-show-columns="true" 
-                        data-toolbar="#toolbar"
-                        data-unique-id="Id" 
-                        data-pagination="true" 
-                        data-search="true" 
-                        data-show-export="true" 
-                        data-page-list="[10, 50, 100, 200, TODO]">
-                        <thead>
-                            <tr>
-                                <th data-field="Folio" data-align="center" data-sortable="true">No. de Parrilla</th>
-                                <th data-field="DateCapture" data-align="center" data-sortable="true" data-formatter="dateFormatter">Fecha de Captura</th>
-                                <th data-field="Receptions" data-align="center" data-sortable="true">Recepciones</th>
-                                <th data-field="Size" data-align="center" data-sortable="true">Tamaño</th>
-                                <th data-field="Sacks" data-align="center" data-sortable="true">Sacos</th>
-                                <th data-field="Kilos" data-align="center" data-sortable="true">Kilos</th>
-                                <th data-field="Quality" data-align="center" data-sortable="true">Calidad</th>
-                                <th data-field="Variety" data-align="center" data-sortable="true">Variedad</th>
-                                <th data-field="Producer" data-align="center" data-sortable="true">Productor</th>
-                                <th data-field="SampleWeight" data-align="center" data-sortable="true">Peso de la Muestra</th>
-                                <th data-field="HumidityPercent" data-align="center" data-sortable="true">Humedad</th>
-                                <th data-field="WalnutNumber" data-align="center" data-sortable="true">No.Nueces por Kilo</th>
-                                <th data-field="Performance" data-align="center" data-sortable="true">Rendimiento</th>
-                                <th data-field="TotalWeightOfEdibleNuts" data-align="center" data-sortable="true">Total</th>
-                                <th ng-if="!IsGrillToReception" data-field="Status" data-formatter="statusFormatter" data-align="center" data-sortable="true"
-                                    ng-hide="currentUser.role === userRoles.qualityUser">Status</th>
-                                <th ng-if="!IsGrillToReception" data-align="center" data-formatter="operateFormatter" data-events="operateEvents">Operaciones</th>
-                                <th ng-if="IsGrillToReception" data-align="center" data-formatter="operateFormmatterIfIsGrillToReception">Asignar Parrilla</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!--<tr ng-repeat="grill in grills | filter:searchUser | filter:{Producer: search.producer, Variety: search.variety, Quality: search.quality}">
-                            <td>{{grill.Folio}}</td>
-                            <td>{{grill.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
-                            <td>{{grill.Receptions}}</td>
-                            <td>{{grill.Size}}</td>
-                            <td>{{grill.Sacks}}</td>
-                            <td>{{grill.Kilos}}</td>
-                            <td>{{grill.Quality}}</td>
-                            <td>{{grill.Variety}}</td>
-                            <td>{{grill.Producer}}</td>
-                            <td>{{grill.SampleWeight}}</td>
-                            <td>{{grill.HumidityPercent}}</td>
-                            <td>{{grill.WalnutNumber}}</td>
-                            <td>{{grill.Performance}}</td>
-                            <td>{{grill.TotalWeightOfEdibleNuts}}</td>
-                            <td ng-hide="currentUser.role === userRoles.qualityUser" ng-if="!IsGrillToReception">
-                                <div class="toggle-switch">
-                                    <input id="{{grill.Id + g}}" type="checkbox" hidden="hidden" ng-model="grill.Status" ng-change="changeStatus(grill.Status, grill.Id)">
-                                    <label for="{{grill.Id + g}}" class="ts-helper"></label>
-                                </div>
-                            </td>
-                            <td ng-if="!IsGrillToReception">
-                                <button ng-hide="currentUser.role === userRoles.qualityUser" class="btn btn-default" ng-click="redirectUpdate(grill.Id, grill)" data-toggle="tooltip" data-placement="bottom"
-                                    title="Modificar">
-                                <i class="md md-edit"></i>
-                            </button>
-                    <button ng-hide="currentUser.role === userRoles.qualityUser" class="btn btn-default" ng-click="confirmationDelete(grill.Id, grill.Folio)"
-                        data-toggle="tooltip" data-placement="bottom" title="Eliminar">
-                                <i class="md md-delete"></i>
-                            </button>
-                    <button ng-hide="currentUser.role === userRoles.qualityUser" class="btn btn-default" ng-click="redirectReceptionToGrill(grill.Id)"
-                        data-toggle="tooltip" data-placement="bottom" title="Agregar folio de recepcion">
-                                <i class="md md-assignment"></i>
-                            </button>
-                    <button ng-show="grill.SampleWeight == ''" class="btn btn-default" ng-click="redirectAddSampling(grill.Id, grill.Folio)"
-                        data-toggle="tooltip" data-placement="bottom" title="Agregar muestreo">
-                                    <i class="md md-description"></i>
-                            </button>
-                    </td>
-                    <td ng-if="IsGrillToReception">
-                        <div class="toggle-switch">
-                            <input id="{{grill.Id}}" type="checkbox" hidden="hidden" ng-model="grill.IsAlreadyAssigned" ng-change="addGrillToReception(grill.Id, grill.IsAlreadyAssigned)">
-                            <label for="{{grill.Id}}" class="ts-helper"></label>
-                        </div>
-                    </td>
-                    </tr>-->
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
+				</div>
+				<table id="grillManageTable">
+				</table>
+			</div>
+		</div>
+	</div>
 </div>
 <button ng-if="IsGrillToReception" id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="return()">
         <i class="md md-arrow-back"></i>
 </button>
-<script type="text/javascript">
-        
-</script>
