--- a/app/views/humidity/humidityAdd.html
+++ b/app/views/humidity/humidityAdd.html
@@ -1,23 +1,12 @@
 <div class="animated bounceInRight">
-    <div class="card">
-        <div class="card-header">
-            <h2>Captura de Humedad</h2>
-        </div>
-        <div class="card-body card-padding">
-            <div class="table-responsive">
-                <div ng-show="humiditiesInReceptionEntry.length >= 1">
-                    <table id="humidityAddTable"
-                        data-toggle="table"
-                        data-show-refresh="true"
-                        data-show-columns="true"
-                        data-unique-id="Id"
-                        data-pagination="true"
-                        data-search="true"
-                        data-show-export="true"
-                        data-page-list="[50, 100, 200, TODO]">
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="card">
+		<div class="card-header">
+			<h2>Captura de Humedad</h2>
+		</div>
+		<div class="card-body card-padding">
+			<div class="table-responsive">
+				<table id="humidityAddTable"></table>
+			</div>
+		</div>
+	</div>
 </div>
