--- a/app/views/humidity/humidityManage.html
+++ b/app/views/humidity/humidityManage.html
@@ -1,28 +1,17 @@
 <div class="animated bounceInRight">
-    <div class="card">
-        <div class="card-header">
-            <h2>Humedades</h2>
-        </div>
-        <div class="card-body card-padding">
-            <div class="table-responsive">
-                <div ng-show="humiditiesInReceptionEntry.length >= 0">
-                    <div id="toolbar">
-                        <button class="btn btn-link" ng-click="generatePDF()">
+	<div class="card">
+		<div class="card-header">
+			<h2>Humedades</h2>
+		</div>
+		<div class="card-body card-padding">
+			<div class="table-responsive">
+				<div id="toolbar">
+					<button class="btn btn-link" ng-click="generatePDF()">
                             <span class="glyphicon glyphicon-share"></span>Exportar PDF
                         </button>
-                    </div>
-                    <table id="humidityManageTable" 
-                        data-show-refresh="true" 
-                        data-show-columns="true" 
-                        data-toolbar="#toolbar"
-                        data-unique-id="Id" 
-                        data-pagination="true" 
-                        data-search="true" 
-                        data-show-export="true" 
-                        data-page-list="[10, 50, 100, 200, TODO]">
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
+				</div>
+				<table id="humidityManageTable"></table>
+			</div>
+		</div>
+	</div>
 </div>
