--- a/app/views/sampling/samplingGrillManage.html
+++ b/app/views/sampling/samplingGrillManage.html
@@ -1,45 +1,19 @@
 <div class="animated bounceInRight">
-    <div class="card">
-        <div class="card-header">
-            <h2>Muestreos (Parrillas)</h2>
-        </div>
-        <div class="card-body card-padding">
-            <div class="table-responsive">
-                <div ng-show="samplings.length >= 1">
-                    <div id="toolbar">
-                        <button class="btn btn-link" ng-click="generatePDF()">
+	<div class="card">
+		<div class="card-header">
+			<h2>Muestreos (Parrillas)</h2>
+		</div>
+		<div class="card-body card-padding">
+			<div class="table-responsive">
+				<div id="toolbar">
+					<button class="btn btn-link" ng-click="generatePDF()">
                             <span class="glyphicon glyphicon-share"></span>Exportar PDF
                         </button>
-                    </div>
-                    <table id="samplingGrillManageTable"
-                                data-toggle="table" 
-                                data-show-refresh="true" 
-                                data-show-columns="true" 
-                                data-toolbar="#toolbar"
-                                data-unique-id="Id" 
-                                data-pagination="true" 
-                                data-search="true" 
-                                data-show-export="true" 
-                                data-page-list="[10, 50, 100, 200, TODO]">
-                    <thead>
-                        <tr>
-                            <th data-field="Folio" data-align="center" data-sortable="true">No. de Parrilla</th>
-                            <th data-field="DateCapture" data-align="center" data-sortable="true" data-formatter="dateFormatter">Fecha</th>
-                            <th data-field="SampleWeight" data-align="center" data-sortable="true">Peso</th>
-                            <th data-field="HumidityPercent" data-align="center" data-sortable="true">Porciento de Humedad</th>
-                            <th data-field="WalnutNumber" data-align="center" data-sortable="true">Número de nueces</th>
-                            <th data-field="Performance" data-align="center" data-sortable="true">Rendimiento</th>
-                            <th data-field="TotalWeightOfEdibleNuts" data-align="center" data-sortable="true">Peso total de nueces Comestibles</th>
-                            <th data-align="center" data-formatter="operateFormatter" data-events="operateEvents">Opciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-                </div>
-            </div>
-        </div>
-    </div>
+				</div>
+				<table id="samplingGrillManageTable"></table>
+			</div>
+		</div>
+	</div>
 </div>
 <button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="return()">
         <i class="md md-arrow-back"></i>
